[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://Options.gd" type="Script" id=2]

[node name="Options" type="CanvasLayer"]
visible = false
script = ExtResource( 2 )

[node name="Window" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -200.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 400 )
theme = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 150
custom_constants/margin_top = 75
custom_constants/margin_left = 150
custom_constants/margin_bottom = 75

[node name="HBox" type="HBoxContainer" parent="Window/Margin"]
margin_left = 150.0
margin_top = 75.0
margin_right = 1770.0
margin_bottom = 325.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Op1" type="Button" parent="Window/Margin/HBox"]
margin_right = 506.0
margin_bottom = 250.0
focus_neighbour_left = NodePath("../DoNothing")
focus_neighbour_right = NodePath("../Op2")
size_flags_horizontal = 3

[node name="Op2" type="Button" parent="Window/Margin/HBox"]
margin_left = 556.0
margin_right = 1063.0
margin_bottom = 250.0
focus_neighbour_left = NodePath("../Op1")
focus_neighbour_right = NodePath("../DoNothing")
size_flags_horizontal = 3

[node name="DoNothing" type="Button" parent="Window/Margin/HBox"]
margin_left = 1113.0
margin_right = 1620.0
margin_bottom = 250.0
focus_neighbour_left = NodePath("../Op2")
focus_neighbour_right = NodePath("../Op1")
size_flags_horizontal = 3
text = "Do Nothing"

[connection signal="button_up" from="Window/Margin/HBox/Op1" to="." method="_on_Op1_button_up"]
[connection signal="button_up" from="Window/Margin/HBox/Op2" to="." method="_on_Op2_button_up"]
[connection signal="button_up" from="Window/Margin/HBox/DoNothing" to="." method="_on_DoNothing_button_up"]
